# py-fun

./: Pipfile  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  linters.yml
rock_paper_scissors/: README.md  rps.py  test_rps.py
scrabble_score/: README.md  score.py
x-lines/: README.md  copy_x_lines.py  write_x_lines.py
